rust/src/search/snapshots/lucid_suggest__search__tests__search_partial-2.snap
---
source: src/search/mod.rs
expression: hits2
---
[
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /1/ [qqqqqq] },
                WordMatch { [rrrr]rrr /0/ [qqqq].. },
            ],
            typos: 4,
            offset: 1,
            trans: 0,
            fin: false,
        },
    },
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [
                WordMatch { [rrrrr] /1/ [qqqqqq] },
            ],
            typos: 1,
            offset: 0,
            trans: 0,
            fin: true,
        },
    },
]
