rust/src/search/snapshots/lucid_suggest__search__tests__search_partial-3.snap
---
source: src/search/mod.rs
expression: hits3
---
[
    Hit {
        id: 20,
        text: Text { "metal" "detector" },
        scores: Scores {
            matches: [
                WordMatch { [rrr]rr /0/ [qqq].. },
            ],
            typos: 2,
            offset: 0,
            trans: 0,
            fin: false,
        },
    },
    Hit {
        id: 30,
        text: Text { "yellow" "metal" "mailbox" },
        scores: Scores {
            matches: [
                WordMatch { [rrr]rr /0/ [qqq].. },
            ],
            typos: 2,
            offset: 1,
            trans: 0,
            fin: false,
        },
    },
]
